Fix landing banner overflow and make inline image background image

--- a/assets/sass/components/_page-headers.scss
+++ b/assets/sass/components/_page-headers.scss
@@ -3,10 +3,9 @@
 	.wrap {
     position: relative;
     margin: 0 auto;
-    width: 100%;
     height: 100%;
     min-height: 625px;
-  
+
     .bg-img {
       position: absolute;
       overflow: hidden;
@@ -16,7 +15,7 @@
       bottom: 0;
       -webkit-backface-visibility: hidden;
       backface-visibility: hidden;
-  
+
       img {
         position: absolute;
         bottom: 0;
@@ -26,7 +25,7 @@
         min-height: 100%;
       }
     }
-  
+
     .page-header {
       position: absolute;
       top: 3em;
@@ -39,11 +38,10 @@
       display: block;
       text-align: center;
       color: #FFF;
-      
+
       h1.page-title {
         color: $white;
-      } 
+      }
     }
   }
 }
-
